static/styles.css
html
{
  overflow-x: hidden;
}

body
{
  background: rgb(169,107,210);
  background: linear-gradient(90deg, rgba(169,107,210,1) 0%, rgba(218,124,124,1) 50%, rgba(187,138,69,1) 100%);
  background-size: 400% 400%;
  animation: animatedgradient 400s ease infinite alternate;
  height: 100vh;
  width:100vw;
}

#login{
  margin:auto;
  margin-top: 20vh;
}


#username, #password, #username-label, #password-label, #confirm{
  display: block;
  width: 15vw;
  margin: auto;
  text-align: center;
  padding-top: 0.5vw;
  margin-bottom:1vw;
}

#username-label, #password-label{
  margin-top: 1vh;
  margin-bottom: 1vh;
  font-size: larger;
  font-weight:bold;
}

#username, #password, #confirm{
  background: rgba(255, 255, 255, 0.5);
}


#submit-btn, #register-btn, #to-login{
  display: block;
  width:10vw;
  margin:auto;
  margin-top: 2vh;
  margin-bottom: 2vh;
  text-decoration: none;
}

#section-holder{
  background: rgba(255, 255, 255, 0.2);
  width: 95vw;
  border: solid;
  margin: auto;
  margin-top: auto;
  padding: 0;
  padding-bottom: 0px;
  margin-top: 12vh;
  padding-bottom: 16vh;
}

#section-holder-detections{
  background: rgba(255, 255, 255, 0.2);
  width: 95vw;
  border: solid;
  margin: auto;
  margin-top: auto;
  padding: 0;
  padding-bottom: 0px;
  margin-top: 12vh;
  padding-bottom: 9vh;
}

.buttons{
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  margin: auto;
  width: 80vw;
  margin-top: 5vh;
  margin-bottom: 10.7vh;
  padding-top: 5vh;
}

.buttons-detections{
  display: grid;
  grid-auto-flow: column;
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  margin: auto;
  width: 80vw;
  margin-top: 5vh;
  margin-bottom: 5vh;
}

.buttons > form > button{
  width:12vw;
  margin-bottom: 2vh;
  overflow: hidden;
  max-height: 5vh;;
}

.buttons-detections > form > button{
  width:12vw;
  margin-bottom: 2vh;
  overflow: hidden;
  max-height: 5vh;;
}

.buttons > form, .buttons-detections > form{
  display:grid;
  grid-auto-flow: row;
  grid-template-rows:repeat(2, 1fr);
  justify-items:center;
}

.welcome{
  font-weight: bold;
  font-size: 150px;
  text-align: center;
  margin-top: 10vh;
  width: 50vw;
  display: block;
}

.desc{
  font-size:24px;
  font-weight:bold;
  text-align:center;
}

#submit-btn{
  margin-top:5vh;
}

#or{
  text-align:center;
}

.message{
  text-align: center;
  margin-top: 7vh;
  position: absolute;
  top: 70vh;
  left: 0;
  right: 0;
}

.message-detections{
  text-align: center;
  font-weight:bold;
  margin-top: 13vh;
  position: absolute;
  top: 70vh;
  left: 0;
  right: 0;
}

#headline
{
  position:fixed;
  top:0;
  width:100%;
  z-index: 1;
  text-align:center;
}


#headline
{
  text-align:center;
}

.bold
{
  font-weight: bold;
}

footer
{
  display:block;
  position: fixed;
  width:100vw;
  text-align:center;
  color:black;
  margin:auto;
  bottom:0.5vh;
}

.bold
{
  font-weight:bold;
}

/*Responsive Design*/

@media screen and (max-width:500px)
{
  #username, #password, #username-label, #password-label, #confirm
  {
    display: block;
    width: 50vw;
    margin: auto;
    text-align: center;
    padding-top: 0.5vw;
    margin-bottom:1vw;
  }

  #submit-btn, #register-btn, #to-login{
    display: block;
    width:40vw;
    margin:auto;
    margin-top: 3vh;
    margin-bottom: 1vh;
    text-decoration: none;
  }

  footer
  {
    display:none;
  }

  .desc{
  font-size:15px;
  font-weight:bold;
  text-align:center;
  }


  .message-detections{
    text-align: center;
    font-weight:bold;
    width:90vw;
    margin:auto;
    position: absolute;
    top: 140vh;
    left: 0;
    right: 0;
  }

  .welcome{
    font-weight: bold;
    font-size: 80px;
    text-align: center;
    margin-top: 10vh;
    width: 50vw;
    display: block;
  }

  .buttons > form > button{
   width:50vw;
   margin-bottom: 5vh;
   overflow: hidden;
   max-height: 10vh;
  }

  .buttons-detections > form > button{
    width:50vw;
    margin-bottom: 5vh;
    overflow: hidden;
    max-height: 10vh;;
  }


  .buttons > form{
    margin-left:15vw;

  }

  .buttons-detections > form{
    margin-left: 15vw;
  }

  .buttons{  
    display: grid; 
    grid-template-rows: 1fr 1fr 1fr; 
    gap: 0px 0px; 
    align-items: center;
    margin: auto;
    width: 20em;
    margin-top: 5vh;
    margin-bottom: 10.7vh;
    padding-top: 1vh;
    
  }
  
  .buttons-detections{
    display: grid;
    grid-template-rows: 1fr 1fr 1fr;
    gap: 0px 0px;
    align-items: center;
    justify-items: center;
    margin: auto;
    width: 20em;
    margin-top: 5vh;
    margin-bottom: 5vh;
  }

  .message{
    text-align: center;
    margin-top: 7vh;
    position: absolute;
    top: 63vh;
    left: 0;
    right: 0;
  }

}

@media screen and (max-width:900px) and (min-width:500px)
{
  #username, #password, #username-label, #password-label, #confirm
  {
    display: block;
    width: 25vw;
    margin: auto;
    text-align: center;
    padding-top: 0.5vw;
    margin-bottom:1vw;
  }

  #submit-btn, #register-btn, #to-login{
    display: block;
    width:20vw;
    margin:auto;
    margin-top: 3vh;
    margin-bottom: 1vh;
    text-decoration: none;
  }

  footer
  {
    display:block;
    position: fixed;
    width:90vw;
    text-align:center;
    color:black;
    margin:auto;
    bottom:1vh;
  }

  .buttons > form > button{
   width:20vw;
   margin-bottom: 5vh;
   overflow: hidden;
   max-height: 5vh;;
  }

  .buttons-detections > form > button{
    width:20vw;
    margin-bottom: 5vh;
    overflow: hidden;
    max-height: 5vh;;
  }

}

/*Animations*/
@keyframes animatedgradient
{
  0%{
    background-position: 0% 50%;
  }

  50%{
    background-position: 100% 50%;
  }

  100%{
    background-position: 0% 50%;
  }

}

